Sutvarkytas lentelės stilius.

--- a/src/styles/_statTable.scss
+++ b/src/styles/_statTable.scss
@@ -1,13 +1,7 @@
 .trackedCreatures{
     table{
+        border-collapse: collapse;
         width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        table-layout: fixed;
-        tr{
-            width: 100%;
-            align-items: stretch;
-        }
         thead{
             width: 100%;
         }
