--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,10 +1,27 @@
 .creature{
-    width: 350px;
+    width: 500px;
     padding: 20px;
     margin: 0 0 20px 0;
     border-radius: 15px;
     border: 3px solid blue;
     background-color: rgb(235, 235, 235);
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .creature-name{
+        width: 100%;
+        padding: 0 0 10px 0;
+        font-size: x-large;
+        font-weight: 600;
+    }
+    .health-counter{
+        width: 34%;
+        padding: 10px;
+        input{
+            height: 75%;
+        }
+    }
+    .stat-table{
+        width: 64%;
+    }
 }
