Patobulintas padaro pridėjimas

--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -4,8 +4,8 @@
     display: flex;
     flex-wrap: wrap;
     .main-hp{
-    }
-    .damage{
+        display: flex;
+        flex-wrap: wrap;
     }
     label{
         display: block;
