--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -1,5 +1,22 @@
 .add-creature{
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap;
     input{
         width: fit-content;
+    }
+    h3{
+        width: 100%;
+    }
+    .stat{
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+        > *{
+            width: 100%;
+        }
+    }
+    button{
+        width: 100%;
     }
 }
