--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,24 +1,35 @@
 .creature{
-    width: 500px;
+    width: 600px;
     padding: 20px;
     margin: 0 0 20px 0;
     border-radius: 15px;
     border: 3px solid blue;
     background-color: rgb(235, 235, 235);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    row-gap: 10px;
+    column-gap: 10px;
     .creature-name{
+        grid-column: 1 / 13;
+        grid-row: 1 / 3;
         width: 100%;
         padding: 0 0 10px 0;
         font-size: x-large;
         font-weight: 600;
     }
     .health-counter{
-        width: 34%;
+        grid-column: 1 / 5;
+        grid-row: 3 / 13;
         padding: 10px;
     }
-    .stat-table{
-        width: 64%;
+    .combat-stat-table{
+        grid-column: 5 / 13;
+        grid-row: 3 / 8;
     }
+    .stat-table{
+        grid-column: 5 / 13;
+        grid-row: 8 / 13;
+    }
+    
 }
