--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -1,15 +1,41 @@
 .health-counter{
     border: 2px solid black;
     border-radius: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    .main-hp{
+    display: grid;
+    grid-gap: 10px;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    > * {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .wrap-hp-max{
+        grid-row: 1 / 3;
+        grid-column: 1 / 5 ; 
+    }
+    .wrap-hp-temp{
+        grid-row: 1 / 3;
+        grid-column: 5 / 9;
+    }
+    .wrap-hp{
+        grid-row: 3 / 5;
+        grid-column: 1 / 9;
+        display: flex;
+        flex-direction: column;
+    }
+    .wrap-hurt{
+        grid-row: 5 / 7;
+        grid-column: 1 / 5;
+    }
+    .wrap-heal{
+        grid-row: 5 / 7;
+        grid-column: 5 / 9;
     }
     label{
-        display: block;
+        width: 100%;
+        height: 25%;
         text-align: center;
+        font-weight: bold;
     }
     input{
         width: 100%;
@@ -17,5 +43,9 @@
         text-align: center;
         border: 0;
         outline: none;
+        height: 75%;
+        margin: 10px 0 0 0;
+        font-size: large;
+        border-radius: 10px;
     }
 }
