--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -1,22 +1,110 @@
 .add-creature{
-    width: 500px;
-    display: flex;
-    flex-wrap: wrap;
+    width: 600px;
+    height: 400px;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgb(235, 235, 235);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 10px;
+
     input{
-        width: fit-content;
-    }
-    h3{
+        background-color: white;
         width: 100%;
-    }
-    .stat{
-        display: flex;
-        flex-wrap: wrap;
-        width: 50%;
-        > *{
-            width: 100%;
-        }
+        text-align: center;
+        border: 0;
+        outline: none;
+        font-size: large;
     }
     button{
+        border: none;
+        border-radius: 10px;
         width: 100%;
+        grid-column: 1 / 13;
+        grid-row: 11 / 13;
+        background-color: rgb(173, 173, 173);
+        font-size: large;
     }
+    .stat{
+        padding: 5px;
+        label{
+            display: block;
+            text-align: center;
+            height: 40%;
+            width: 100%;
+            font-weight: bold;
+        }
+        input{
+            border-radius: 10px;
+            height: 60%;
+        }
+    }
+    &-info{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        grid-row: 1 / 3;
+        grid-column: 1 / 13;
+        border: 2px solid black;
+        border-radius: 10px;
+        .stat{
+            width: 100%;
+        }
+        input{
+            font-size: x-large;
+            text-align: left;
+        }
+    }
+    &-health{
+        padding: 5px;
+        display: flex;
+        grid-row: 3 / 8;
+        grid-column: 1 / 7;
+        border: 2px solid black;
+        border-radius: 10px;
+        .stat{
+            width: calc(100%/3);
+        }
+    }
+    &-cmbt-stats{
+        padding: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        grid-row: 3 / 8;
+        grid-column: 7 / 13;
+        border: 2px solid black;
+        border-radius: 10px;
+        .stat:first-of-type{
+            width: 100%;
+            input{
+                width: 50%;
+            }
+            div{
+                display: inline-block;
+                text-align: center;
+                width: 50%;
+                font-size: x-large;
+            }
+        }
+        .stat:nth-of-type(n+2){
+            width: 50%;
+        }  
+    }
+    &-stats{
+        padding: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        grid-row: 8 / 11;
+        grid-column: 1 / 13;
+        border: 2px solid black;
+        border-radius: 10px;
+        .stat{
+            width: calc(100%/6);
+        }
+    }
+     
+    
+    
 }
