--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -6,8 +6,8 @@
     border-radius: 10px;
     background-color: rgb(235, 235, 235);
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 0.75fr 2fr 1.5fr 0.75fr;
     gap: 10px;
 
     input{
@@ -16,68 +16,61 @@
         text-align: center;
         border: 0;
         outline: none;
-        font-size: large;
+        font-size: 1.25rem;
     }
     button{
         border: none;
         border-radius: 10px;
         width: 100%;
-        grid-column: 1 / 13;
-        grid-row: 11 / 13;
+        grid-column: 1 / -1;
         background-color: rgb(173, 173, 173);
-        font-size: large;
+        font-size: 1.25rem;
     }
     .stat{
         padding: 5px;
         label{
             display: block;
             text-align: center;
-            height: 40%;
+            min-height: 40%;
             width: 100%;
             font-weight: bold;
         }
         input{
             border-radius: 10px;
-            height: 60%;
+            min-height: 60%;
         }
     }
-    &-info{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        grid-row: 1 / 3;
-        grid-column: 1 / 13;
+    &-name{
+        
+        grid-column: 1 / -1;
         border: 2px solid black;
         border-radius: 10px;
-        .stat{
-            width: 100%;
-        }
-        input{
-            font-size: x-large;
-            text-align: left;
+        .stat {
+            height: 100%; // neveiks su min height, bugas iš naršyklės pusės, vaikinis elementas nepaveldįs aukščio
+            input{
+                font-family: "Enchanted Land";
+                font-size: 2rem;
+                text-align: left;
+                min-height: 100%;
+            }
         }
     }
     &-health{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
         padding: 5px;
-        display: flex;
-        grid-row: 3 / 8;
-        grid-column: 1 / 7;
         border: 2px solid black;
         border-radius: 10px;
-        .stat{
-            width: calc(100%/3);
-        }
     }
     &-cmbt-stats{
         padding: 5px;
-        display: flex;
-        flex-wrap: wrap;
-        grid-row: 3 / 8;
-        grid-column: 7 / 13;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         border: 2px solid black;
         border-radius: 10px;
+        
         .stat:first-of-type{
-            width: 100%;
+            grid-column: 1 / -1;
             input{
                 width: 50%;
             }
@@ -85,26 +78,16 @@
                 display: inline-block;
                 text-align: center;
                 width: 50%;
-                font-size: x-large;
+                font-size: 1.5rem;
             }
         }
-        .stat:nth-of-type(n+2){
-            width: 50%;
-        }  
     }
     &-stats{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
         padding: 5px;
-        display: flex;
-        flex-wrap: wrap;
-        grid-row: 8 / 11;
-        grid-column: 1 / 13;
+        grid-column: 1 / -1;
         border: 2px solid black;
         border-radius: 10px;
-        .stat{
-            width: calc(100%/6);
-        }
     }
-     
-    
-    
 }
