--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -14,7 +14,7 @@
         grid-row: 1 / 3;
         width: 100%;
         padding: 0 0 10px 0;
-        font-size: x-large;
+        font-size: 1.5rem;
         font-weight: 600;
     }
     .health-counter{
