--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,3 +2,31 @@
     font-family: "Echanted Land";
     src: url(../fonts/EnchantedLand.ttf);
 }
+@font-face {
+    font-family: "Bavarian Crown";
+    src: url(../fonts/BavarianCrownPersonalRegular.ttf);
+}
+@font-face {
+    font-family: "Breathe Fire";
+    src: url(../fonts/BreatheFire.ttf);
+}
+@font-face {
+    font-family: "Breathe Fire2";
+    src: url(../fonts/BreatheFireI2.ttf);
+}
+@font-face {
+    font-family: "Mysticora";
+    src: url(../fonts/Mysticora.ttf);
+}
+@font-face {
+    font-family: "Hobbiton Brushhand";
+    src: url(../fonts/HobbitonBrushhand.ttf);
+}
+@font-face {
+    font-family: "Middleearth";
+    src: url(../fonts/Middleearth.ttf);
+}
+@font-face {
+    font-family: "Ringbearer";
+    src: url(../fonts/Ringbearer.ttf);
+}
