--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,34 +1,36 @@
 .creature{
     width: 600px;
-    padding: 20px;
-    margin: 0 0 20px 0;
+    padding: 10px 20px 20px 20px;
+    margin: 10px 0 10px 0;
     border-radius: 15px;
     border: 3px solid blue;
     background-color: rgb(235, 235, 235);
     display: grid;
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto 1fr 1fr;
     gap: 10px;
     .creature-name{
-        grid-column: 1 / 13;
-        grid-row: 1 / 3;
+        grid-column: 1;
         width: 100%;
-        padding: 0 0 10px 0;
-        font-size: 1.5rem;
-        font-weight: 600;
+        font-size: 2rem;
+        font-family: "Enchanted Land";
+    }
+    button{
+        width: fit-content;
+        place-self: right;
     }
     .health-counter{
-        grid-column: 1 / 5;
-        grid-row: 3 / 13;
+        grid-column: 1;
+        grid-row: 2 / -1;
         padding: 10px;
     }
     .combat-stat-table{
-        grid-column: 5 / 13;
-        grid-row: 3 / 8;
+        grid-column: 2;
+        grid-row: 2;
     }
     .stat-table{
-        grid-column: 5 / 13;
-        grid-row: 8 / 13;
+        grid-column: 2;
+        grid-row: 3;
     }
 }
 .dead{
