--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -1,52 +1,51 @@
 .add-creature{
-    width: 600px;
-    height: 400px;
+    max-width: max-content;
     padding: 10px;
     border: 2px solid black;
     border-radius: 10px;
     background-color: rgb(235, 235, 235);
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 3fr 2fr;
     grid-template-rows: 0.75fr 2fr 1.5fr 0.75fr;
     gap: 10px;
 
+    *{
+        font-family: "Breathe Fire";
+        text-align: center;
+    }
+    label{
+        font-size: 1.25rem;
+        font-weight: 500;
+    }
     input{
         background-color: white;
-        width: 100%;
-        text-align: center;
         border: 0;
         outline: none;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
+        border-radius: 10px;
+        width: 100%;
     }
     button{
         border: none;
         border-radius: 10px;
-        width: 100%;
         grid-column: 1 / -1;
         background-color: rgb(173, 173, 173);
-        font-size: 1.25rem;
+        font-size: 2.25rem;
+        font-family: "Enchanted Land";
     }
     .stat{
-        padding: 5px;
-        label{
-            display: block;
-            text-align: center;
-            min-height: 40%;
-            width: 100%;
-            font-weight: bold;
-        }
-        input{
-            border-radius: 10px;
-            min-height: 60%;
-        }
+        display: grid;
+        grid-template-rows: auto 1fr;
+        gap: 5px;
     }
+
     &-name{
-        
         grid-column: 1 / -1;
         border: 2px solid black;
         border-radius: 10px;
         .stat {
             height: 100%; // neveiks su min height, bugas iš naršyklės pusės, vaikinis elementas nepaveldįs aukščio
+            grid-template-rows: auto;
             input{
                 font-family: "Enchanted Land";
                 font-size: 2rem;
@@ -56,37 +55,39 @@
         }
     }
     &-health{
+        padding: 10px;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 5px;
+        grid-template-columns: repeat(3, 1fr);        
+        gap: 10px;
         border: 2px solid black;
         border-radius: 10px;
     }
-    &-cmbt-stats{
-        padding: 5px;
+    &-cmbt-stats{       
+        padding: 10px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
         border: 2px solid black;
         border-radius: 10px;
         
         .stat:first-of-type{
             grid-column: 1 / -1;
-            input{
-                width: 50%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            label{
+                grid-column: 1 / -1;
             }
             div{
-                display: inline-block;
-                text-align: center;
-                width: 50%;
                 font-size: 1.5rem;
             }
         }
     }
     &-stats{
+        padding: 10px;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        padding: 5px;
         grid-column: 1 / -1;
+        gap: 10px;
         border: 2px solid black;
         border-radius: 10px;
     }
