--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -1,5 +1,5 @@
 .add-creature{
-    max-width: max-content;
+    width: max-content;
     padding: 10px;
     border: 2px solid black;
     border-radius: 10px;
