--- a/src/styles/_combatStatTable.scss
+++ b/src/styles/_combatStatTable.scss
@@ -3,14 +3,18 @@
     border-radius: 10px;
     border-spacing: 10px;
     table-layout: fixed;
-    width: 100%;
+    // width: max-content;
+    font-family: "Breathe Fire";
+
+    input{
+        font-family: "Breathe Fire";
+    }
     td{
         background-color: white;
         border-radius: 10px;
         input{
             background-color: white;
             width: 100%;
-            height: 100%;
             text-align: center;
             font-size: xx-large;
             border: 0;
