--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,14 +1,20 @@
 .creature{
-    width: 600px;
+    max-width: max-content; //plotis toks pats kaip ir addCreature
     padding: 10px 20px 20px 20px;
     margin: 10px 0 10px 0;
     border-radius: 15px;
     border: 3px solid blue;
     background-color: rgb(235, 235, 235);
+
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 5fr;
     grid-template-rows: auto 1fr 1fr;
     gap: 10px;
+
+    input{
+        width: min-content;
+    }
+
     .creature-name{
         grid-column: 1;
         width: 100%;
