--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -4,6 +4,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
+    font-family: "Breathe Fire";
+
     >*{
         display: grid;
     }
@@ -12,16 +14,17 @@
     }
     label{
         text-align: center;
-        font-weight: bold;
+        font-size: 1.25rem;
+        font-weight: 500;
     }
     input{
         width: 100%;
-        height: 100%;
         background-color: white;
         text-align: center;
         border: 0;
         outline: none;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         border-radius: 10px;
+        font-family: "Breathe Fire";
     }
 }
