--- a/src/styles/_statTable.scss
+++ b/src/styles/_statTable.scss
@@ -3,12 +3,16 @@
     border-radius: 10px;
     border-spacing: 5px;
     table-layout: fixed;
-    width: 100%;
+    width: max-content;
+    font-family: "Breathe Fire";
+
+    input{
+        font-family: "Breathe Fire";
+    }
     tbody{
         align-items: center;
         input{
             background-color: white;
-            width: 100%;
             text-align: center;
             font-size: large;
             border: 0;
