--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -5,7 +5,7 @@
     border-radius: 10px;
     background-color: rgb(235, 235, 235);
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 1fr auto;
     grid-template-rows: 0.75fr 2fr 1.5fr 0.75fr;
     gap: 10px;
 
