--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,5 +1,5 @@
 .creature{
-    max-width: max-content; //plotis toks pats kaip ir addCreature
+    max-width: max-content;
     padding: 10px 20px 20px 20px;
     margin: 10px 0 10px 0;
     border-radius: 15px;
@@ -7,7 +7,7 @@
     background-color: rgb(235, 235, 235);
 
     display: grid;
-    grid-template-columns: 2fr 5fr;
+    grid-template-columns: 1fr auto;
     grid-template-rows: auto 1fr 1fr;
     gap: 10px;
 
