--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -3,28 +3,30 @@
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+    gap: 10px;
     font-family: "Breathe Fire";
 
-    >*{
+    div{
         display: grid;
+        grid-template-rows: auto 1fr;
+        gap: 5px;
+        label{
+            text-align: center;
+            font-size: 1.25rem;
+            font-weight: 500;
+        }
+        input{
+            width: 100%;
+            background-color: white;
+            text-align: center;
+            border: 0;
+            outline: none;
+            font-size: 1.25rem;
+            border-radius: 10px;
+            font-family: "Breathe Fire";
+        }
     }
     .wrap-hp-current{
         grid-column: 1 / -1;
-    }
-    label{
-        text-align: center;
-        font-size: 1.25rem;
-        font-weight: 500;
-    }
-    input{
-        width: 100%;
-        background-color: white;
-        text-align: center;
-        border: 0;
-        outline: none;
-        font-size: 1.5rem;
-        border-radius: 10px;
-        font-family: "Breathe Fire";
     }
 }
