Šriftai iškelti į creature

--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -11,8 +11,11 @@
     grid-template-rows: auto 1fr 1fr;
     gap: 10px;
 
+    font-family: "Breathe Fire";
+
     input{
         width: min-content;
+        font-family: "Breathe Fire";
     }
 
     .creature-name{
