Pakeista struktura, prideti sriftai

--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -27,6 +27,11 @@
     button{
         width: fit-content;
         place-self: right;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-family: "Breathe Fire";
+        font-size: 1.5rem;
+        outline: none;
     }
     .health-counter{
         grid-column: 1;
