--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -30,3 +30,15 @@
     font-family: "Ringbearer";
     src: url(../fonts/Ringbearer.ttf);
 }
+@font-face {
+    font-family: "Darkmode";
+    src: url(../fonts/DarkmodeRegular.ttf);
+}
+@font-face {
+    font-family: "Black Rose";
+    src: url(../fonts/BlackRose.ttf);
+}
+@font-face {
+    font-family: "Forresta";
+    src: url(../fonts/ForrestaRegular.ttf);
+}
