--- a/src/styles/_combatStatTable.scss
+++ b/src/styles/_combatStatTable.scss
@@ -8,7 +8,7 @@
     gap: 10px;
     text-align: center;
     
-    div{
+    li{
         display: grid;
         grid-template-rows: auto 1fr;
         gap: 5px;
