--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 
-    div{
+    li{
         display: grid;
         grid-template-rows: auto 1fr;
         gap: 5px;
