--- a/src/styles/_statTable.scss
+++ b/src/styles/_statTable.scss
@@ -8,7 +8,7 @@
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
 
-    div{
+    li{
         display: grid;
         grid-template-rows: auto 1fr 1fr;
         gap: 5px;
