--- a/src/styles/_addCreature.scss
+++ b/src/styles/_addCreature.scss
@@ -2,12 +2,12 @@
     width: max-content;
     padding: 10px;
     border: 2px solid black;
-    border-radius: 10px;
+    border-radius: var(--round-corners);
     background-color: rgb(235, 235, 235);
     display: grid;
     grid-template-columns: 1fr auto;
     grid-template-rows: 0.75fr 2fr 1.5fr 0.75fr;
-    gap: 10px;
+    gap: var(--gap-medium);
 
     *{
         font-family: "Breathe Fire";
@@ -22,12 +22,11 @@
         border: 0;
         outline: none;
         font-size: 1.5rem;
-        border-radius: 10px;
-        width: 100%;
+        border-radius: var(--round-corners);
     }
     button{
         border: none;
-        border-radius: 10px;
+        border-radius: var(--round-corners);
         grid-column: 1 / -1;
         background-color: rgb(173, 173, 173);
         font-size: 2.25rem;
@@ -36,13 +35,13 @@
     .stat{
         display: grid;
         grid-template-rows: auto 1fr;
-        gap: 5px;
+        gap: var(--gap-small);
     }
 
     &-name{
         grid-column: 1 / -1;
         border: 2px solid black;
-        border-radius: 10px;
+        border-radius: var(--round-corners);
         .stat {
             height: 100%; // neveiks su min height, bugas iš naršyklės pusės, vaikinis elementas nepaveldįs aukščio
             grid-template-rows: auto;
@@ -50,7 +49,6 @@
                 font-family: "Enchanted Land";
                 font-size: 2rem;
                 text-align: left;
-                min-height: 100%;
             }
         }
     }
@@ -58,17 +56,17 @@
         padding: 10px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);        
-        gap: 10px;
+        gap: var(--gap-medium);
         border: 2px solid black;
-        border-radius: 10px;
+        border-radius: var(--round-corners);
     }
     &-cmbt-stats{       
         padding: 10px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
+        gap: var(--gap-medium);
         border: 2px solid black;
-        border-radius: 10px;
+        border-radius: var(--round-corners);
         
         .stat:first-of-type{
             grid-column: 1 / -1;
@@ -87,8 +85,8 @@
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-column: 1 / -1;
-        gap: 10px;
+        gap: var(--gap-medium);
         border: 2px solid black;
-        border-radius: 10px;
+        border-radius: var(--round-corners);
     }
 }
