--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,10 +3,17 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
-body *{
+*{
   box-sizing: border-box;
+}
+body{
+  margin: 0;
 }
 ul{
   margin: 0;
+  padding: 0;
   list-style: none;
+}
+button{
+  cursor: pointer;
 }
