--- a/src/styles/_healthCounter.scss
+++ b/src/styles/_healthCounter.scss
@@ -8,7 +8,7 @@
     li{
         display: grid;
         grid-template-rows: auto 1fr;
-        gap: 5px;
+        gap: var(--gap-small);
         label{
             text-align: center;
             font-size: 1.25rem;
