--- a/src/styles/_turnTimeline.scss
+++ b/src/styles/_turnTimeline.scss
@@ -1,3 +1,21 @@
 .turn-timeline{
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-auto-rows: auto 1fr;
+    gap: var(--gap-medium);
+    .creature{
+        grid-row: 1 / 3;
+    }
+    .minified-creatures{
+        display: flex;
+        align-items: flex-start;
+        gap: var(--gap-medium);
+        overflow-x: scroll;
+        .creature-minfied{
+            max-height: fit-content;
+        }
+    }
+    &-controls{
+        grid-column: auto / -1;
+    }
 }
