--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,10 +1,9 @@
 .creature{
     max-width: max-content;
-    padding: 10px 20px 20px 20px;
+    padding: 10px;
     border-radius: 15px;
     border: 3px solid blue;
     background-color: rgb(235, 235, 235);
-
     display: grid;
     grid-template-columns: 1fr auto;
     grid-template-rows: auto 1fr 1fr;
