--- a/src/styles/_turnTimeline.scss
+++ b/src/styles/_turnTimeline.scss
@@ -1,10 +1,16 @@
 .turn-timeline{
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-auto-rows: auto 1fr;
+    grid-auto-rows: auto auto 1fr;
     gap: var(--gap-medium);
+    .title-active-creature{
+        grid-row: 1;
+    }
+    .title-timeline{
+        grid-row: 1;
+    }
     .creature{
-        grid-row: 1 / 3;
+        grid-row: 2 / 4;
     }
     .minified-creatures{
         display: flex;
