--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @use "_main";
 @use "_statTable";
 @use "_addCreature";
+@use "_editCreature";
 @use "_creature";
 @use "_healthCounter";
 @use "_combatStatTable";
