--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,5 +1,6 @@
 .creature{
     max-width: max-content;
+    height: fit-content;
     padding: 10px;
     border-radius: 15px;
     border: 3px solid blue;
