--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -3,14 +3,8 @@ main{
     padding: 1rem;
     display: grid;
     grid-template-columns: 1fr auto;
-    gap: var(--gap-medium);
+    gap: 40px var(--gap-medium);
     .turn-timeline{
         grid-column: 1 / -1;
-    }
-    .add-creature{
-        grid-row: 3;
-    }
-    .edit-creature{
-        grid-row: 3;
     }
 }
