--- a/src/styles/_creature.scss
+++ b/src/styles/_creature.scss
@@ -1,5 +1,5 @@
 .creature{
-    max-width: max-content;
+    width: max-content;
     height: fit-content;
     padding: 10px;
     border-radius: 15px;
@@ -46,6 +46,9 @@
         grid-row: 3;
     }
 }
-.dead{
+.creature.dead{
     background-color: rgb(255, 220, 220);
+}
+.creature.placeholder{
+    visibility: hidden;
 }
