--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,7 +3,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
-*{
+*, ::before, ::after{
   box-sizing: border-box;
 }
 body{
