--- a/src/styles/_turnTimeline.scss
+++ b/src/styles/_turnTimeline.scss
@@ -13,7 +13,7 @@
         font-size: 2rem;
         grid-row: 1;
     }
-    .creature{
+    .active-creature-holder{
         grid-row: 2 / 4;
     }
     .minified-creatures{
