--- a/src/styles/_editCreature.scss
+++ b/src/styles/_editCreature.scss
@@ -6,5 +6,19 @@
         font-size: 2rem;
         font-family: "Ringbearer";
     }
-
+    .placeholder{
+        position: relative;
+    }
+    .placeholder::before{
+        content: "No creature selected";
+        display: grid;
+        place-content: center;
+        font-size: 1.75rem;
+        font-family: "Breathe Fire";
+        position: absolute;
+        inset: 0;
+        background-color: rgb(209, 212, 243);
+        border-radius: var(--round-corners);
+        visibility: visible;
+    }
 }
