--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,5 +1,5 @@
 main{
-    max-width: fit-content;
+    max-width: min-content;
     padding: 1rem;
     display: grid;
     grid-template-columns: 1fr auto;
