--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
     font-family: "Echanted Land";
     src: url(../fonts/EnchantedLand.ttf);
+    //neturi ... (elipsis) simbolio, negalima naudoti kur bus text-overflow
 }
 @font-face {
     font-family: "Bavarian Crown";
