--- a/src/styles/_creatureMinified.scss
+++ b/src/styles/_creatureMinified.scss
@@ -1,25 +1,27 @@
 .creature-minified{
     padding: 10px;
     height: max-content;
-    min-width: max-content;
+    min-width: 175px;
     border: 2px solid black;
     border-radius: var(--round-corners);
-    display: grid;
-    gap: var(--gap-small);
-    grid-template-columns: 1fr auto;
     text-align: center;
     font-family: "Breathe Fire";
     cursor: pointer;
 
-    &-name{
-        width: 100%;
-        font-size: 1.5rem;
-        font-family: "Enchanted land";
-    }
-    button{
-        font-family: "Breathe Fire";
-        border-radius: 5px;
-        border: 1px solid black;
+    .creature-nameline{
+        display: flex;
+        justify-content: space-between;
+        gap: var(--gap-small);
+        .creature-minified-name{
+            text-overflow: ellipsis;
+            overflow: hidden;
+            font-size: 1.25rem;
+        }
+        button{
+            font-family: "Breathe Fire";
+            border-radius: 5px;
+            border: 1px solid black;
+        }
     }
     ul{
         grid-column: 1 / -1;
