--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,4 +10,9 @@ main{
     .round-counter{
         grid-column: 3 / 4;
     }
+    >div{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 }
