--- a/src/styles/_turnTimeline.scss
+++ b/src/styles/_turnTimeline.scss
@@ -3,14 +3,10 @@
     grid-template-columns: auto 1fr;
     grid-auto-rows: auto auto 1fr;
     gap: var(--gap-medium);
-    .title-active-creature{
-        font-family: "Ringbearer";
-        font-size: 2rem;
+    .title{
         grid-row: 1;
     }
-    .title-timeline{
-        font-family: "Ringbearer";
-        font-size: 2rem;
+    .title{
         grid-row: 1;
     }
     .active-creature-holder{
